# painto

./: .gitignore  README.md  pyproject.toml
docs/: .buildinfo  .buildinfo.bak  api.html  genindex.html  index.html  objects.inv  painto.html  py-modindex.html  quickstart.html  search.html  search.js  searchindex.js  usage.html
docs/_modules/: index.html
docs/_modules/painto/: color.html  color_list.html
docs/_sources/: quickstart.rst.txt  usage.rst.txt
docs/painto/: color.html  color_list.html  exceptions.html  index.html  list_base.html  list_pride.html  list_w3c.html  list_xkcd.html
docs/source/: api.rst  conf.py  index.rst  usage.rst
docs_src/source/: api.rst  conf.py
src/painto/: __init__.py  color.py  color_list.py  exceptions.py  list_base.py  list_pride.py  list_rainbow.py  list_w3c.py  list_xkcd.py
tests/: __init__.py  test_color.py  test_color_list.py
